--- a/spec/paths/orders/orders@{id}@waybills.yaml
+++ b/spec/paths/orders/orders@{id}@waybills.yaml
@@ -14,11 +14,11 @@ post:
     This will generate a waybill for the specified order
   responses:
     '200':
-      description: generate waybill for specified order
+      description: generates a waybill for specified order
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/tracking'
+            $ref: '#/components/schemas/order_response'
     '400':
       description: 'invalid input, object invalid'
       content:
