--- a/spec/components/schemas/origin_address.yaml
+++ b/spec/components/schemas/origin_address.yaml
@@ -42,3 +42,7 @@ properties:
   phone:
     type: string
     example: '+27825547358'
+  classification:
+    type: string
+    enum: ['residential', 'business']
+    example: 'residential'
