--- a/spec/components/schemas/dangerous_goods.yaml
+++ b/spec/components/schemas/dangerous_goods.yaml
@@ -1,6 +1,8 @@
-required:
-  - un_code
+type: object
 properties:
-  un_code:
-    type: string
-    example: UN3090
+  dangerous_good_id:
+    type: integer
+    example: 1
+  pieces:
+    type: integer
+    example: 1
